# Inside of setup.cfg, See links for details:
# https://setuptools.pypa.io/en/stable/userguide/declarative_config.html
# https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata

[metadata]
name = "scikit-plots"                      # my_package
version = "attr: scikitplot.VERSION"       # attr: my_package.VERSION any module attribute compatible with ast.literal_eval
author = ""
author_email = ""
description = ""                           # My package description
long_description = ""                      # file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = ""                              # one, two
license = ""                               # BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

license_files = ['LICEN[CS]E*',]
description_file = README.md

[options]
# zip_safe = False
include_package_data = True
packages = find:
# package_dir=
#     =scikitplot
python_requires = >=3.9
# install_requires =
#     importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

[options.packages.find]
include = scikitplot*
exclude =
  auto_building_tools*
  docs*
  galleries*
  third_party*
    
[options.extras_require]
tester =
  pytest
dev =
  %(tester)s

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = scikitplot
addopts =
  --doctest-modules
  --disable-pytest-warnings
  --color=yes

[mypy]
ignore_missing_imports = True
allow_redefinition = True
exclude=
  scikitplot/externals

[mypy-joblib.*]
follow_imports = skip