# Authors: The scikit-plots developers
# SPDX-License-Identifier: BSD-3-Clause

# Inside of setup.cfg, See links for details:
# https://setuptools.pypa.io/en/stable/userguide/declarative_config.html
# https://setuptools.pypa.io/en/stable/userguide/declarative_config.html#metadata

[metadata]
name = "scikit-plots"                      # my_package
version = "attr: scikitplot.VERSION"       # attr: my_package.VERSION any module attribute compatible with ast.literal_eval
description = ""                           # My package description
long_description = ""                      # file: README.rst, CHANGELOG.rst, LICENSE.rst

keywords = ""                              # one, two
## If defined required to fully compatible with SPDX license expression by license-files
## or use test or file license = {file = "LICENSE"}
classifiers =
  Programming Language :: Python :: 3
# license = {file = "LICENSE"}             # Primary license file
## https://spdx.org/licenses/BSD-3-Clause.html
license = 'BSD-3-Clause'                   # 'MIT', 'Apache-2.0', 'GPL-3.0-or-later',
## license-files field to be used only if the license field contains a valid SPDX license expression.
license-files = ['LICENSE', 'LICENSES/*', 'LICEN[CS]E*/*']

## The readme file this is what users will see on your project's PyPI page.
# readme = {file = "README.md", content-type = "text/markdown"}
description_file = README.md

author = "scikit-plots developers"
author_email = ""

[options]
python_requires = >=3.9
# zip_safe = False
include_package_data = True
packages = find:
# package_dir=
#     =scikitplot
# install_requires =
#     importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

[options.packages.find]
include = scikitplot*
exclude =
  auto_building_tools*
  docs*
  galleries*
  third_party*

[options.extras_require]
tester =
  pytest
# dev =
#  %(tester)s  # cause error dependabot.yml

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = scikitplot
addopts =
  --doctest-modules
  --disable-pytest-warnings
  --color=yes
